# static-stream

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md  rustfmt.toml
.github/workflows/: ci.yml  release.yml
assets/: app.html
docs/: architecture.md  camera-signing.md  releases.md  usage.md  voice-effects.md
platform/macos/: ActivationHelper.swift  AudioDriverInstaller.swift  CameraDevelopmentTest.swift  DeviceProbe.swift  Info.plist  StaticStream.entitlements
platform/macos/audio-driver/: Info.plist  StaticStreamAudio.c  StaticStreamAudioTests.c
platform/macos/camera-extension/: FreezeFrameSelector.swift  Info.plist  StaticStreamCamera.entitlements  StaticStreamCameraProvider.swift  main.swift
scripts/: build-macos.sh  check.sh
src/: clips.rs  config.rs  lib.rs  macos.rs  main.rs  state.rs  updates.rs
src/audio/: effects.rs  engine.rs  mixer.rs  mod.rs
tests/: installed_audio_driver.rs
