[package]
name = "static-stream"
version = "0.1.9"
edition = "2024"
rust-version = "1.85"
description = "Keyboard-first virtual camera and microphone controller"
license = "MIT"

[lib]
name = "static_stream"
path = "src/lib.rs"

[[bin]]
name = "static-stream"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
cpal = "0.18.1"
crossbeam-channel = "0.5.15"
directories = "6.0.0"
ringbuf = "0.4.8"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.145"
semver = "1.0.27"
sha2 = "0.10.9"
symphonia = { version = "0.6.0", features = ["all"] }
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }

[target.'cfg(target_os = "macos")'.dependencies]
global-hotkey = "0.8.0"
objc2 = "0.6.2"
objc2-foundation = { version = "0.3.2", features = ["NSUserDefaults", "NSString"] }
tao = { version = "0.35.3", default-features = false, features = ["rwh_06"] }
tray-icon = { version = "0.24.1", default-features = false }
wry = { version = "0.55.1", default-features = false }

[dev-dependencies]
tempfile = "3.20.0"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
float_cmp = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
